@@ -2,8 +2,10 @@ package tech.nocountry.roadbites.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
+import org.springframework.context.annotation.Profile;
 import org.springframework.context.event.EventListener;
 import org.springframework.stereotype.Service;
+import tech.nocountry.roadbites.controller.dto.order.CreateOrderMenuDTO;
 import tech.nocountry.roadbites.controller.dto.order.OrderMenuResponseDTO;
 import tech.nocountry.roadbites.controller.dto.order.OrderResponseDTO;
 import tech.nocountry.roadbites.controller.dto.order.PlaceOrderDTO;
@@ -40,6 +42,7 @@ public class OrderService {
             orderMenuRepository.save(newOrderMenu);
         }
         );
+
         emailService.sendOrderConfirmationEmail(
                 order.userEmail(),
                 buildOrderEmailBody(order));
@@ -78,23 +81,91 @@ public class OrderService {
         );
     }
 
-    private String buildOrderEmailBody(PlaceOrderDTO order) {
-        String orderList = order.orderMenus().stream()
-                .map(orderMenu ->
-                        "- " + orderMenu.menuName()
-                         + " (" + orderMenu.quantity() + ")"
-                         + " $" + orderMenu.price() * orderMenu.quantity())
-                .collect(Collectors.joining("<br>"));
+    private String buildOrderListHtml(PlaceOrderDTO order) {
+        StringBuilder orderListHtml = new StringBuilder();
 
-        return """
-                <html>
-                <body>
-                    <h2>Pedido Confirmado</h2>
-                    <p>Tu pedido ha sido recibido con éxito:</p>
-                    <p>%s</p>
-                    <p>¡Gracias por tu compra!</p>
-                </body>
-                </html>
-                """.formatted(orderList);
+        for (CreateOrderMenuDTO orderMenu : order.orderMenus()) {
+            orderListHtml.append(String.format("""
+            <div class="order-item">
+                <img src="%s" alt="%s">
+                <span>%s (%d) </span>
+                <span> - $%.0f</span>
+            </div>
+            """,
+                    orderMenu.image(),  // URL de la imagen
+                    orderMenu.menuName(),   // Alt text de la imagen
+                    orderMenu.menuName(),   // Nombre del producto
+                    orderMenu.quantity(),         // Cantidad del producto
+                    orderMenu.price() * orderMenu.quantity()  // Precio total del producto
+            ));
+        }
+
+        return orderListHtml.toString();
+    }
+    private String buildOrderEmailBody(PlaceOrderDTO order) {
+        return String.format("""
+                    <html>
+                    <head>
+                        <style>
+                            body {
+                                font-family: Arial, sans-serif;
+                                background-color: #f8f8f8;
+                                margin: 0;
+                                padding: 20px;
+                            }
+                            .container {
+                                max-width: 600px;
+                                background: white;
+                                padding: 20px;
+                                border-radius: 10px;
+                                box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+                                text-align: center;
+                            }
+                            h3 {
+                                color: #ff6600;
+                                margin-bottom: 20px;
+                            }
+                            .order-list {
+                                background: #f2f2f2;
+                                padding: 10px;
+                                border-radius: 5px;
+                                text-align: left;
+                                display: inline-block;
+                                width: 100%%;
+                            }
+                            .order-item {
+                                display: flex;
+                                align-items: center;
+                                padding: 8px;
+                                border-bottom: 1px solid #ddd;
+                            }
+                            .order-item img {
+                                width: 40px;
+                                height: 40px;
+                                border-radius: 5px;
+                                margin-right: 10px;
+                            }
+                            .order-item span {
+                                font-size: 16px;
+                                color: #333;
+                            }
+                            .footer {
+                                margin-top: 20px;
+                                font-size: 14px;
+                                color: #777;
+                            }
+                        </style>
+                        </head>
+                        <body>
+                            <div class="container">
+                                <h3>RoadBites© - Pedido Confirmado</h3>
+                                <p><strong>%s</strong>, tu pedido ha sido recibido con éxito:</p>
+                                <div class="order-list">%s</div>
+                                <p>¡Gracias por tu compra!</p>
+                            </div>
+                        </body>
+                        </html>
+                    """, order.userName(), buildOrderListHtml(order));
+
     }
 }
